# Elearn

./: .gitignore  PREMIUM_SETUP_GUIDE.md  app_state.py  billing_manager.py  config.py  data_manager.py  generate_lessons.py  lessons.json  llm_client.py  main.py  main.spec  progress.json  pyproject.toml  requirements.txt  settings_manager.py  structure.md  ui_components.py  ui_factory.py  user_data_manager.py  user_settings.json
app_languages/: en.json  es.json
generate_lessons/: README_translation.md  fix_lesson.py  generate_language_settings.py  generate_lessons.py  make_api_call.py
lessons/: lesson_explanation.md
lessons/en-nl/: lessons.json
lessons/es-nl/: lessons.json
managers/: progress_manager.py
src/: app_state.py  config.py  data_manager.py  firebase_manager.py  llm_client.py  settings_manager.py  ui_components.py
src/managers/: data_manager.py  firebase_manager.py  progress_manager.py  settings_manager.py  user_data_manager.py
src/services/: github_service.py
src/state/: lesson_state.py
src/utils/: __init__.py  network_utils.py  typing_simulator.py
src/view_models/: home_view_model.py  language_selection_view_model.py  lesson_view_model.py
src/views/: home_view.py  intro_view.py  language_selection_view.py  lesson_view.py  login_view.py  logout_view.py  premium_view.py  settings_view.py
state/: lesson_state.py  scenario_state.py
tests/: test_lesson_structure.py
view_models/: home_view_model.py  lesson_view_model.py
views/: home_view.py  intro_view.py  lesson_view.py  premium_view.py  settings_view.py
