[project]
name = "ELearn"
version = "1.0.0"
description = "Educational Learning App"
dependencies = [
    "flet>=0.27.1",
    "requests",
    "python-dotenv"
]

[tool.flet.android]
dependencies = [
    "pyjnius"
]

[tool.flet.android.permissions]
"com.android.vending.BILLING" = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"