[project]
name = "LLMers"
version = "1.0.0"
description = "Educational Learning App"
dependencies = [
    "flet>=0.27.1",
    "requests",
    "python-dotenv",
    "openai",
    "gradio_client"
]

[tool.flet.android]
dependencies = [
    "pyjnius"
]

[tool.flet.android.permissions]
"com.android.vending.BILLING" = true
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"